# ARPegio

./: .gitignore  README.md  index.html  pyproject.toml
assets/css/: arpegio.css
assets/js/: agent-tools.js  arpegio.js  data.js  gemini-agent.js  icons.js  inference.js  render.js
config/: label_intervals.json
data/processed/: features_l2_labeled.csv
data/raw/pcap/: victima1.pcapng  victima2.pcapng
docs/: articulo.fdb_latexmk  articulo.fls  articulo.tex
models/: autoencoder.onnx  autoencoder.pt  scaler.json  scaler.pkl  threshold.npy
refs/: arpegio.html
results/: alerts_prioritized.csv  alerts_summary.json  lab_scenarios.json  metrics.json  window_scores.json
scripts/: export_onnx.py  extract_features.py  prioritize_alerts.py  prioritizer.py  train_autoencoder.py
